--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,8 @@
     "http-errors": "^2.0.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4"
+    "mongoose": "^6.3.0",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   }
 }
