--- a/.gitignore
+++ b/.gitignore
@@ -3152,3 +3152,4 @@ Backend/node_modules/yallist/LICENSE
 Backend/node_modules/yallist/package.json
 Backend/node_modules/yallist/README.md
 Backend/node_modules/yallist/yallist.js
+Backend/FileSystem/
